--- a/src/firstorder/dune
+++ b/src/firstorder/dune
@@ -1,7 +1,7 @@
 (library
  (name fol)
  (public_name cyclist.fol)
- (libraries lib generic mparser)
+ (libraries lib generic mparser-pcre)
  (modules
   (:standard \ prove)))
 
