--- a/src/generic/dune
+++ b/src/generic/dune
@@ -11,7 +11,7 @@
   (names proof
     proof_aut trace buchi_soundness
     types sloped_relation heighted_graph relational_soundness)
-  (flags :standard -xc++ -std=c++1y (:include c_flags.sexp))
+  (flags :standard -xc++ -std=c++17 (:include c_flags.sexp))
   (include_dirs %{ocaml_where}/caml))
  (c_library_flags (:include c_library_flags.sexp) -lstdc++))
 
