Added a thread to free memory

--- a/src/generic/test/Makefile
+++ b/src/generic/test/Makefile
@@ -15,13 +15,13 @@ endef
 all: soundness tests
 
 soundness: main.o sloped_relation.o heighted_graph.o
-	g++ -g -o soundness main.o sloped_relation.o heighted_graph.o
+	g++ -pthread -g -o soundness main.o sloped_relation.o heighted_graph.o
 
 main.o: main.cpp ../heighted_graph.hpp 
 	g++ -I ../ -L/opt/lib -g -c main.cpp -o main.o
 
 heighted_graph.o: ../heighted_graph.hpp ../heighted_graph.c ../sloped_relation.hpp ../types.c
-	g++ -I ../ -L/opt/lib -g -c ../heighted_graph.c -o heighted_graph.o
+	g++ -pthread -I ../ -L/usr/lib -L/opt/lib -g -c ../heighted_graph.c -o heighted_graph.o
 
 sloped_relation.o: ../sloped_relation.c ../sloped_relation.hpp ../types.c
 	g++ -I ../ -L/opt/lib -g -c ../sloped_relation.c -o sloped_relation.o
