Switch from mparser-pcre to mparser-re.

--- a/src/firstorder/dune
+++ b/src/firstorder/dune
@@ -1,7 +1,7 @@
 (library
  (name fol)
  (public_name cyclist.fol)
- (libraries lib generic mparser-pcre)
+ (libraries lib generic mparser)
  (modules
   (:standard \ prove)))
 
