--- a/cyclist.opam
+++ b/cyclist.opam
@@ -16,6 +16,7 @@ depends: [
   "dune" {>= "2.2"}
   "ocaml" {>= "4.08.0"}
   "stdlib-shims" {build}
+  "dune-configurator" {build}
   "mparser-re" {>= "1.3"}
   "hashcons" {>= "1.0.1"}
   "hashset" {>= "1.0.0"}
