--- a/src/generic/dune
+++ b/src/generic/dune
@@ -13,7 +13,7 @@
     types sloped_relation heighted_graph relational_soundness)
   (flags :standard -xc++ -std=c++17 (:include c_flags.sexp))
   (include_dirs %{ocaml_where}/caml))
- (c_library_flags (:include c_library_flags.sexp) -pthread -lstdc++))
+ (c_library_flags (:include c_library_flags.sexp) -lpthread -lstdc++))
 
 (executable
  (name checkproof)
