Added test3 UNSOUND in cyclist tests

--- a/tests/soundness/dune
+++ b/tests/soundness/dune
@@ -15,3 +15,10 @@
  (public_name test2)
  (modules test2)
  (libraries generic lib base))
+
+
+(executable
+ (name test3)
+ (public_name test3)
+ (modules test3)
+ (libraries generic lib base))
