These test cases demonstrate more clearly the performance degradation in XSD implementation.

--- a/src/generic/test/Makefile
+++ b/src/generic/test/Makefile
@@ -120,9 +120,17 @@ test-suite-rel: soundness
 	$(call test_success, graph_13)
 	$(call test_failure, graph_14)
 	$(call test_failure, graph_15)
-	$(call test_failure, graph_16a)
-	$(call test_failure, graph_16b)
-	$(call test_failure, graph_16c)
+	$(call test_success, graph_16.00)
+	$(call test_success, graph_16.01)
+	$(call test_success, graph_16.02)
+	$(call test_success, graph_16.03)
+	$(call test_success, graph_16.04)
+	$(call test_success, graph_16.05)
+	$(call test_success, graph_16.06)
+	$(call test_success, graph_16.07)
+	$(call test_success, graph_16.08)
+	$(call test_success, graph_16.09)
+	$(call test_success, graph_16.10)
 
 tests-sd:
 	echo "SPRENGER-DAM"
@@ -152,6 +160,14 @@ test-suite-sd: soundness
 	$(call test_failure, graph_13)
 	$(call test_failure, graph_14)
 	$(call test_failure, graph_15)
-	$(call test_failure, graph_16a)
-	$(call test_failure, graph_16b)
-	$(call test_failure, graph_16c)
+	$(call test_success, graph_16.00)
+	$(call test_success, graph_16.01)
+	$(call test_success, graph_16.02)
+	$(call test_success, graph_16.03)
+	$(call test_success, graph_16.04)
+	$(call test_success, graph_16.05)
+	$(call test_success, graph_16.06)
+	$(call test_success, graph_16.07)
+	$(call test_success, graph_16.08)
+	$(call test_success, graph_16.09)
+	$(call test_success, graph_16.10)
