Update test suite for XSD code.

--- a/src/generic/test/Makefile
+++ b/src/generic/test/Makefile
@@ -29,9 +29,9 @@ sloped_relation.o: ../sloped_relation.c ../sloped_relation.hpp ../types.c
 graph.o: ../graph.c ../graph.hpp ../sloped_relation.hpp
 	g++ -I ../ -L/opt/lib -g -c ../graph.c -o graph.o
 
-.PHONY: clean tests test-suite-rel test-suite-sd tests-rel tests-set tests-no-opts tests-ff tests-scc tests-idem tests-min tests-ff-min tests-ff-scc tests-ff-idem tests-min-scc tests-ff-min-scc tests-1-ff tests-1-scc tests-1-idem tests-1-min tests-1-ff-min tests-1-ff-scc tests-1-ff-idem tests-1-min-scc tests-1-ff-min-scc tests-sd tests-xsd
+.PHONY: clean tests test-suite-rel test-suite-sd test-suite-xsd tests-rel tests-set tests-no-opts tests-ff tests-scc tests-idem tests-min tests-ff-min tests-ff-scc tests-ff-idem tests-min-scc tests-ff-min-scc tests-1-ff tests-1-scc tests-1-idem tests-1-min tests-1-ff-min tests-1-ff-scc tests-1-ff-idem tests-1-min-scc tests-1-ff-min-scc tests-sd tests-xsd
 
-.SILENT: tests tests-rel tests-set tests-sd tests-xsd test-suite-rel test-suite-sd test_success test_failure tests-no-opts tests-ff tests-scc tests-min tests-idem tests-ff-scc tests-min-scc tests-ff-idem
+.SILENT: tests tests-rel tests-set tests-sd tests-xsd test-suite-rel test-suite-sd test-suite-xsd test_success test_failure tests-no-opts tests-ff tests-scc tests-min tests-idem tests-ff-scc tests-min-scc tests-ff-idem
 
 clean: 
 	rm -f ./*.o soundness
@@ -138,7 +138,7 @@ tests-sd:
 
 tests-xsd:
 	echo "EXTENDED SPRENGER-DAM"
-	export FLAGS=X; make -s test-suite-sd
+	export FLAGS=X; make -s test-suite-xsd
 
 test-suite-sd: soundness
 	$(call test_success, graph_1)
@@ -158,6 +158,38 @@ test-suite-sd: soundness
 	$(call test_failure, graph_11)
 	$(call test_failure, graph_12)
 	$(call test_failure, graph_13)
+	$(call test_failure, graph_14)
+	$(call test_failure, graph_15)
+	$(call test_success, graph_16.00)
+	$(call test_success, graph_16.01)
+	$(call test_success, graph_16.02)
+	$(call test_success, graph_16.03)
+	$(call test_success, graph_16.04)
+	$(call test_success, graph_16.05)
+	$(call test_success, graph_16.06)
+	$(call test_success, graph_16.07)
+	$(call test_success, graph_16.08)
+	$(call test_success, graph_16.09)
+	$(call test_success, graph_16.10)
+
+test-suite-xsd: soundness
+	$(call test_success, graph_1)
+	$(call test_failure, graph_2)
+	$(call test_success, graph_3)
+	$(call test_success, graph_4)
+	$(call test_success, graph_5)
+	$(call test_failure, graph_6)
+	$(call test_failure, graph_7)
+	$(call test_failure, graph_8)
+	$(call test_failure, graph_8a)
+	$(call test_success, graph_8b)
+	$(call test_failure, graph_9)
+	$(call test_failure, graph_9a)
+	$(call test_failure, graph_9b)
+	$(call test_success, graph_10)
+	$(call test_failure, graph_11)
+	$(call test_failure, graph_12)
+	$(call test_success, graph_13)
 	$(call test_failure, graph_14)
 	$(call test_failure, graph_15)
 	$(call test_success, graph_16.00)
