Add first order logic tests to makefile test targets.

--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -4,6 +4,9 @@ TARGETS := $(filter-out Makefile,$(wildcard *))
 sl-%:
 	$(MAKE) -C sl $*
 
+fo:
+	$(MAKE) -C fo all
+
 proc:
 	$(MAKE) -C procs all
 
