Add external timeout for running with XSD.

--- a/benchmarks/fo/Makefile
+++ b/benchmarks/fo/Makefile
@@ -1,6 +1,7 @@
-CMD := "src/firstorder/prove.exe"
+TIMEOUT:=$(or $(TIMEOUT),30)
 TESTS:= $(sort $(wildcard *.tst))
 DEFS := "$(ROOT)/examples/fo.defs"
+CMD := "src/firstorder/prove.exe"
 
 .PHONY: all $(TESTS)
 
@@ -10,5 +11,5 @@ $(TESTS): %.tst:
 	@echo "$@"
 	-@while read -r SEQ; do \
 		echo -n "\t"; \
-		(cd "$(ROOT)" && dune exec $(CMD) -- -D $(DEFS) $(TST_OPTS) -S "$$SEQ" || true) ;\
+		(cd "$(ROOT)" && timeout "$$(($(TIMEOUT) + 1))" dune exec $(CMD) -- $(TST_OPTS) -t $(TIMEOUT) -S "$$SEQ" || echo "Not proved (timeout)") ;\
 	done < "$@"
