--- a/benchmarks/sl/base/Makefile
+++ b/benchmarks/sl/base/Makefile
@@ -1,10 +1,13 @@
+TIMEOUT:=$(or $(TIMEOUT),30)
 TESTS:= $(sort $(wildcard *.tst))
+
 .PHONY: all $(TESTS)
+
 all: $(TESTS)
 
 $(TESTS): %.tst:
 	@echo "$@"
 	-@while read -r SEQ; do \
 		echo -n "\t"; \
-		(cd "$(ROOT)" && dune exec $(CMD) -- $(TST_OPTS) -S "$$SEQ" || true) ;\
+		(cd "$(ROOT)" && timeout "$$(($(TIMEOUT) + 1))" dune exec $(CMD) -- $(TST_OPTS) -t $(TIMEOUT) -S "$$SEQ" || echo "Not proved (timeout)") ;\
 	done < "$@"
