--- a/benchmarks/sl/songbird/Makefile
+++ b/benchmarks/sl/songbird/Makefile
@@ -1,3 +1,4 @@
+TIMEOUT:=$(or $(TIMEOUT),30)
 TESTS:= $(sort $(wildcard *.tst))
 DEFS := "$(ROOT)/examples/songbird.defs"
 
@@ -8,5 +9,5 @@ $(TESTS): %.tst:
 	@echo "$@"
 	-@while read -r SEQ; do \
 		echo -n "\t"; \
-		(cd "$(ROOT)" && dune exec $(CMD) -- -D $(DEFS) $(TST_OPTS) -S "$$SEQ" || true) ;\
+		(cd "$(ROOT)" && timeout "$$(($(TIMEOUT) + 1))" dune exec $(CMD) -- $(TST_OPTS) -t $(TIMEOUT) -S "$$SEQ" || echo "Not proved (timeout)") ;\
 	done < "$@"
