Add second, related test case for XSD bug.

--- a/src/generic/test/Makefile
+++ b/src/generic/test/Makefile
@@ -134,7 +134,8 @@ test-suite-rel: soundness
 	$(call test_failure, graph_17)
 	$(call test_success, graph_18)
 	$(call test_success, graph_19)
-	$(call test_failure, graph_20)
+	$(call test_failure, graph_20a)
+	$(call test_failure, graph_20b)
 
 tests-sd:
 	echo "SPRENGER-DAM"
@@ -178,7 +179,8 @@ test-suite-sd: soundness
 	$(call test_failure, graph_17)
 	$(call test_success, graph_18)
 	$(call test_failure, graph_19)
-	$(call test_failure, graph_20)
+	$(call test_failure, graph_20a)
+	$(call test_failure, graph_20b)
 
 test-suite-xsd: soundness
 	$(call test_success, graph_1)
@@ -214,4 +216,5 @@ test-suite-xsd: soundness
 	$(call test_failure, graph_17)
 	$(call test_success, graph_18)
 	$(call test_success, graph_19)
-	$(call test_failure, graph_20)
+	$(call test_failure, graph_20a)
+	$(call test_failure, graph_20b)
