--- a/src/generic/test/Makefile
+++ b/src/generic/test/Makefile
@@ -136,6 +136,7 @@ test-suite-rel: soundness
 	$(call test_success, graph_19)
 	$(call test_failure, graph_20a)
 	$(call test_failure, graph_20b)
+	$(call test_failure, graph_21)
 
 tests-sd:
 	echo "SPRENGER-DAM"
@@ -181,6 +182,7 @@ test-suite-sd: soundness
 	$(call test_failure, graph_19)
 	$(call test_failure, graph_20a)
 	$(call test_failure, graph_20b)
+	$(call test_failure, graph_21)
 
 test-suite-xsd: soundness
 	$(call test_success, graph_1)
@@ -218,3 +220,4 @@ test-suite-xsd: soundness
 	$(call test_success, graph_19)
 	$(call test_failure, graph_20a)
 	$(call test_failure, graph_20b)
+	$(call test_failure, graph_21)
