Adding Zarith to dune etc

--- a/src/seplog/dune
+++ b/src/seplog/dune
@@ -1,7 +1,7 @@
 (library 
  (name seplog)
  (public_name cyclist.seplog)
- (libraries lib generic mparser-re)
+ (libraries lib generic mparser-re zarith)
  (modules
    (:standard 
       \ slinit
@@ -18,11 +18,11 @@
    sl_prove sl_disprove sl_modelcheck sl_satcheck sl_satexpgen)
  (modules
    prove disprove modelcheck satcheck satexpgen)
- (libraries lib generic seplog))
+ (libraries lib generic seplog zarith))
 
 (toplevel
  (name sltop)
- (libraries lib generic seplog))
+ (libraries lib generic seplog zarith))
 
 ; (executable
 ;  (name        sltop)
