--- a/cyclist.opam
+++ b/cyclist.opam
@@ -21,6 +21,7 @@ depends: [
   "hashcons" {>= "1.0.1"}
   "hashset" {>= "1.0.0"}
   "ocamlgraph" {>= "1.8.7"}
+  "zarith" {>= "1.12.0"}
 ]
 build: [
   ["dune" "subst"] {pinned}
