prototype code -- fixed graph_16.X and graph_7

--- a/src/generic/test/Makefile
+++ b/src/generic/test/Makefile
@@ -193,7 +193,7 @@ test-suite-xsd: soundness
 	$(call test_success, graph_4)
 	$(call test_success, graph_5)
 #	$(call test_failure, graph_6)
-#	$(call test_failure, graph_7)
+	$(call test_failure, graph_7)
 	$(call test_failure, graph_8)
 	$(call test_failure, graph_8a)
 	$(call test_success, graph_8b)
@@ -214,9 +214,9 @@ test-suite-xsd: soundness
 	$(call test_success, graph_16.05)
 	$(call test_success, graph_16.06)
 	$(call test_success, graph_16.07)
-#	$(call test_success, graph_16.08)
-#	$(call test_success, graph_16.09)
-#	$(call test_success, graph_16.10)
+	$(call test_success, graph_16.08)
+	$(call test_success, graph_16.09)
+	$(call test_success, graph_16.10)
 	$(call test_failure, graph_17)
 	$(call test_success, graph_18)
 	$(call test_failure, graph_19)
